Add github actions pipeline

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ passenv =
     CI_*
     GIT_*
 
-[testenv:test-py3{9,10,11,12,13}]
-description = Run tests with pytest for dedicated python environment.
+[testenv:test-py]
+description = Run tests with pytest.
 skip_install = false
 extras = test
 commands =
