--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -53,7 +53,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade 
+        python -m pip install pip --upgrade
         python -m pip install uv --upgrade
         uv pip install --system tox
     - name: Run tests
