--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: "3.12"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade 
+        python -m pip install pip --upgrade 
         python -m pip install uv --upgrade
         uv pip install --system tox
     - name: codestyle
@@ -75,7 +75,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade 
+        python -m pip install pip --upgrade
         python -m pip install uv --upgrade
         uv pip install --system tox
     - name: Run tests
