Remove mypy-github

--- a/tox.ini
+++ b/tox.ini
@@ -109,12 +109,10 @@ description = Run static type checker for codequality analysis in ci.
 base = types, testenv
 deps =
     {[testenv:types]deps}
-    mypy-github-code-quality
 allowlist_externals = sh, uv
 commands =
     sh -c "mkdir -p lint"
-    sh -c "mypy --check-untyped-defs --install-types --non-interactive {posargs:src/ tests/} 2> lint/cq_types_mypy.txt || true"
-    sh -c "mypy-github-code-quality < lint/cq_types_mypy.txt > lint/cq_types_mypy.json || true"
+    sh -c "mypy --check-untyped-defs --install-types --non-interactive --error-format=github {posargs:src/ tests/} > lint/cq_types_mypy.json || true"
     {[testenv:types]commands}
 
 [testenv:types]
@@ -133,7 +131,7 @@ base = security, testenv
 deps =
     {[testenv:security]deps}
 commands =
-    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --error-format=github --output-file lint/cq_security_ruff.json
+    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --output-format github --output-file lint/cq_security_ruff.json
     {[testenv:security]commands}
 
 [testenv:security]
