--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: CI
 
 on: 
   push:
@@ -58,7 +58,12 @@ jobs:
         uv pip install --system tox
     - name: Run tests
       run: |
-        tox -e test-py
+        tox -e test-py -- --xunitxml=report-ubuntu${{ matrix.python-version }}.xml
+      uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: test-report-ubuntu-${{ matrix.python-version }}
+        path: report-ubuntu${{ matrix.python-version }}.xml
 
   test-windows:
     runs-on: windows-latest
@@ -80,4 +85,9 @@ jobs:
         uv pip install --system tox
     - name: Run tests
       run: |
-        tox -e test-py -- --junitxml=report-windows.xml
+        tox -e test-py -- --xunitxml=report-windows${{ matrix.python-version }}.xml
+      uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: test-report-windows-${{ matrix.python-version }}
+        path: report-windows${{ matrix.python-version }}.xml
