use jest-junit as reporter

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -103,4 +103,4 @@ jobs:
         artifact: test-results            # artifact name
         name: JEST Tests                  # Name of the check run which will be created
         path: '*.xml'                     # Path to test results (inside artifact .zip)
-        reporter: python-xunit              # Format of test results
+        reporter: jest-junit              # Format of test results
