--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -100,6 +100,7 @@ jobs:
     steps:
     - uses: dorny/test-reporter@v2
       with:
-        name: JEST Tests                  # Name of the check run which will be created
+        artifact: /test-report-(.*)/           # artifact name
+        name: test-results-$1                  # Name of the check run which will be created
         path: '*.xml'                     # Path to test results (inside artifact .zip)
         reporter: jest-junit              # Format of test results
