--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 jobs:
-  typecheck:
+  lint:
 
     runs-on: ubuntu-latest
     strategy:
@@ -38,12 +38,14 @@ jobs:
       run: |
         tox -e types-ci
 
-  test-ubuntu:
-    runs-on: ubuntu-latest
+  test:
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu, windows]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+
+    runs-on: ${{ matrix.os }}-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -58,44 +60,16 @@ jobs:
         uv pip install --system tox
     - name: Run tests
       run: |
-        tox -e test-py -- --junitxml=report-ubuntu${{ matrix.python-version }}.xml
+        tox -e test-py -- --junitxml=report-${{ matrix.os }}-${{ matrix.python-version }}.xml
     - name: Upload test results
       if: ${{ !cancelled() }}
       uses: actions/upload-artifact@v4
       with:
-        name: test-report-ubuntu-${{ matrix.python-version }}
-        path: report-ubuntu${{ matrix.python-version }}.xml
-
-  test-windows:
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install pip --upgrade
-        python -m pip install uv --upgrade
-        uv pip install --system tox
-    - name: Run tests
-      run: |
-        tox -e test-py -- --junitxml=report-windows${{ matrix.python-version }}.xml
-    - name: Upload test results
-      if: ${{ !cancelled() }}
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-report-windows-${{ matrix.python-version }}
-        path: report-windows${{ matrix.python-version }}.xml
+        name: test-report-${{ matrix.os }}-${{ matrix.python-version }}
+        path: report-${{ matrix.os }}-${{ matrix.python-version }}.xml
 
   report-results:
-    needs: [test-ubuntu, test-windows]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
     - uses: dorny/test-reporter@v2
