remove output file from security check

--- a/tox.ini
+++ b/tox.ini
@@ -131,7 +131,7 @@ base = security, testenv
 deps =
     {[testenv:security]deps}
 commands =
-    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --output-format github --output-file lint/cq_security_ruff.json
+    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --output-format github
     {[testenv:security]commands}
 
 [testenv:security]
