remove output file from docstyle

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
 description = Check docstrings for PEP 257 compliance (Google style) for codequality analysis in ci.
 base = docstyle, testenv
 commands =
-    ruff check {posargs:src/} --select D --exit-zero --output-format github --output-file lint/cq_docstyle_ruff.json
+    ruff check {posargs:src/} --select D --exit-zero --output-format github
     {[testenv:docstyle]commands}
 
 [testenv:docstyle]
@@ -131,7 +131,7 @@ base = security, testenv
 deps =
     {[testenv:security]deps}
 commands =
-    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --output-format github
+    ruff check {posargs:src/} --select S --ignore S113,S404,S603 --exit-zero --output-format github --output-file lint/cq_security_ruff.json
     {[testenv:security]commands}
 
 [testenv:security]
