--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
 description = Check docstrings for PEP 257 compliance (Google style) for codequality analysis in ci.
 base = docstyle, testenv
 commands =
-    ruff check {posargs:src/} --select D --exit-zero --output-format github
+    ruff check {posargs:src/} --select D --exit-zero --output-format github --output-file lint/cq_docstyle_ruff.json
     {[testenv:docstyle]commands}
 
 [testenv:docstyle]
