set ignore-missing-imports flag

--- a/tox.ini
+++ b/tox.ini
@@ -112,7 +112,7 @@ deps =
 allowlist_externals = sh, uv
 commands =
     sh -c "mkdir -p lint"
-    sh -c "mypy --check-untyped-defs --install-types --non-interactive --error-format=github {posargs:src/ tests/} > lint/cq_types_mypy.json || true"
+    sh -c "mypy --ignore-missing-imports --check-untyped-defs --install-types --non-interactive {posargs:src/ tests/} > lint/cq_types_mypy.json || true"
     {[testenv:types]commands}
 
 [testenv:types]
