add ignore to both checks

--- a/tox.ini
+++ b/tox.ini
@@ -123,7 +123,7 @@ deps =
     pip
     pytest
 commands =
-    mypy --check-untyped-defs --install-types --non-interactive --pretty {posargs:src/ tests/}
+    mypy --ignore-missing-imports --check-untyped-defs --install-types --non-interactive --pretty {posargs:src/ tests/}
 
 [testenv:security-ci]
 description = Security scan with ruff.
